--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,71 @@
-<router-outlet/>
+<div>
+  <div class="bg-white shadow-sm sticky top-0">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-1 md:py-4">
+      <div class="flex items-center justify-between md:justify-start">
+        <!-- Menu Trigger -->
+        <button type="button" class="md:hidden w-10 h-10 rounded-lg -ml-2 flex justify-center items-center">
+          <svg class="text-gray-500 w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+        <!-- ./ Menu Trigger -->
+
+        <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>
+
+        <div class="hidden md:flex space-x-3 flex-1 lg:ml-8">
+          <!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>-->
+          <!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>-->
+          <!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>-->
+          <!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>-->
+          <!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>-->
+        </div>
+
+        <div *ngIf="!logined" class="flex items-center space-x-4">
+          <button
+            class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+            data-ripple-light="true">
+            <a href="/register">Register</a>
+          </button>
+          <button
+            class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+            data-ripple-light="true">
+            <a href="/login">Login</a>
+          </button>
+        </div>
+
+        <div *ngIf="logined" class="flex items-center space-x-4">
+          <a href="/cart" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">
+            <svg class="h-6 w-6 leading-none text-gray-300 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+            </svg>
+            <span class="pl-1 text-gray-500 text-md">{{countCart}}</span>
+          </a>
+
+          <div class="group inline-block">
+            <button class="outline-none focus:outline-none border px-3 py-1 bg-white rounded-sm flex items-center min-w-32">
+              <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">
+              <p>{{user.username}}</p>
+            </button>
+            <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
+              <li class="rounded-sm px-3 py-1 hover:bg-gray-100"><a href="/user">User</a></li>
+              <li class="rounded-sm px-3 py-1 hover:bg-gray-100"><a href="/order">Order</a></li>
+              <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="authService.logout()"><a href="/login">Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Search Mobile -->
+      <div class="relative md:hidden">
+        <input type="search" class="mt-1 w-full pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">
+
+        <svg class="h-6 w-6 text-gray-300 ml-2 mt-3 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+        </svg>
+      </div>
+      <!-- ./ Search Mobile -->
+    </div>
+  </div>
+
+  <router-outlet/>
+</div>
