--- a/src/app/pages/home/cart/cart.component.html
+++ b/src/app/pages/home/cart/cart.component.html
@@ -13,7 +13,7 @@
               </button>
               <!-- ./ Menu Trigger -->
 
-              <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>
+              <p class="font-bold text-gray-700 text-2xl">Cart</p>
             </div>
 
             <!-- Search Mobile -->
@@ -31,14 +31,9 @@
     <div class="mx-3">
       <div class="w-full max-w-sm min-w-[200px] relative">
         <div class="relative">
-          <input
-            class="bg-white w-full pr-11 h-10 pl-3 py-2 bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md"
-            placeholder="Search for product..."
-          />
-          <button
-            class="absolute h-8 w-8 right-1 top-1 my-auto px-2 flex items-center bg-white rounded "
-            type="button"
-          >
+          <input #productInput class="bg-white w-full pr-11 h-10 pl-3 py-2 bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-400 shadow-sm focus:shadow-md"
+            placeholder="Search for product..."/>
+          <button (click)="searchByProductName(productInput.value)" class="absolute h-8 w-8 right-1 top-1 my-auto px-2 flex items-center bg-white rounded " type="button">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" class="w-8 h-8 text-slate-600">
               <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
             </svg>
@@ -62,13 +57,13 @@
       </tr>
       </thead>
       <tbody>
-      <tr class="hover:bg-slate-50" *ngFor="let cartItem of cartItems">
+      <tr class="hover:bg-slate-50" *ngFor="let cartItem of cart.cartItems">
         <td class="p-4 border-b border-slate-200 py-5">
           <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" (change)="onSelectItem(cartItem.id, $event)">
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
           <a href="{{cartItem.product.id}}">
-            <img *ngIf="cartItem.product.mainImage?.image" [src]="'data:image/jpeg;base64,' + cartItem.product.mainImage.image.toString()" alt="Product 1" class="w-16 h-16 object-cover rounded" />
+            <img *ngIf="cartItem.product.images[0]?.image" [src]="'data:image/jpeg;base64,' + cartItem.product.images[0].image.toString()" alt="Product 1" class="w-16 h-16 object-cover rounded" />
           </a>
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
