--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,83 +18,83 @@
 
   <div class="w-screen">
     <header class="">
-      <div class="bg-white shadow-sm sticky top-0">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-1 md:py-4">
-          <div class="flex items-center justify-between md:justify-start">
-            <!-- Menu Trigger -->
-            <button type="button" class="md:hidden w-10 h-10 rounded-lg -ml-2 flex justify-center items-center">
-              <svg class="text-gray-500 w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-              </svg>
-            </button>
-            <!-- ./ Menu Trigger -->
+<!--      <div class="bg-white shadow-sm sticky top-0">-->
+<!--        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-1 md:py-4">-->
+<!--          <div class="flex items-center justify-between md:justify-start">-->
+<!--            &lt;!&ndash; Menu Trigger &ndash;&gt;-->
+<!--            <button type="button" class="md:hidden w-10 h-10 rounded-lg -ml-2 flex justify-center items-center">-->
+<!--              <svg class="text-gray-500 w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">-->
+<!--                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />-->
+<!--              </svg>-->
+<!--            </button>-->
+<!--            &lt;!&ndash; ./ Menu Trigger &ndash;&gt;-->
 
-            <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>
+<!--            <a href="" class="font-bold text-gray-700 text-2xl">Original Shop</a>-->
 
-            <div class="hidden md:flex space-x-3 flex-1 lg:ml-8">
-<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>-->
-<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>-->
-<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>-->
-<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>-->
-<!--              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>-->
-            </div>
+<!--            <div class="hidden md:flex space-x-3 flex-1 lg:ml-8">-->
+<!--&lt;!&ndash;              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Electronics</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Fashion</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Tools</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">Books</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              <a href="#" class="px-2 py-2 hover:bg-gray-100 rounded-lg text-gray-400 hover:text-gray-600">More</a>&ndash;&gt;-->
+<!--            </div>-->
 
-            <div *ngIf="!logined" class="flex items-center space-x-4">
-              <button (click)="registerClick()"
-                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-                data-ripple-light="true">
-                Register
-              </button>
-              <button (click)="loginClick()"
-                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-                data-ripple-light="true">
-                Login
-              </button>
-            </div>
+<!--            <div *ngIf="!logined" class="flex items-center space-x-4">-->
+<!--              <button-->
+<!--                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
+<!--                data-ripple-light="true">-->
+<!--                <a href="/register">Register</a>-->
+<!--              </button>-->
+<!--              <button-->
+<!--                class="middle none center mr-3 rounded-lg bg-pink-500 py-3 px-6 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"-->
+<!--                data-ripple-light="true">-->
+<!--                <a href="/login">Login</a>-->
+<!--              </button>-->
+<!--            </div>-->
 
-            <div *ngIf="logined" class="flex items-center space-x-4">
-              <a href="/cart" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">
-                <svg class="h-6 w-6 leading-none text-gray-300 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                </svg>
-                <span class="pl-1 text-gray-500 text-md">{{countCart}}</span>
-              </a>
+<!--            <div *ngIf="logined" class="flex items-center space-x-4">-->
+<!--              <a href="/cart" class="flex h-10 items-center px-2 rounded-lg border border-gray-200 hover:border-gray-300 focus:outline-none hover:shadow-inner">-->
+<!--                <svg class="h-6 w-6 leading-none text-gray-300 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">-->
+<!--                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />-->
+<!--                </svg>-->
+<!--                <span class="pl-1 text-gray-500 text-md">{{countCart}}</span>-->
+<!--              </a>-->
 
-              <div class="group inline-block">
-                <button class="outline-none focus:outline-none border px-3 py-1 bg-white rounded-sm flex items-center min-w-32">
-                  <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">
-                  <p>{{user.username}}</p>
-                </button>
-                <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">
-                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="userClick()">User</li>
-                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="orderClick()">Order</li>
-                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="logoutClick()">Logout</li>
-                </ul>
-              </div>
-            </div>
-          </div>
+<!--              <div class="group inline-block">-->
+<!--                <button class="outline-none focus:outline-none border px-3 py-1 bg-white rounded-sm flex items-center min-w-32">-->
+<!--                  <img src="https://avatars.dicebear.com/api/bottts/2.svg" alt="bottts" width="28" height="28" class="rounded-lg mx-auto">-->
+<!--                  <p>{{user.username}}</p>-->
+<!--                </button>-->
+<!--                <ul class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32">-->
+<!--                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100"><a href="/user">User</a></li>-->
+<!--                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100"><a href="/order">Order</a></li>-->
+<!--                  <li class="rounded-sm px-3 py-1 hover:bg-gray-100" (click)="authService.logout()"><a href="/login">Logout</a></li>-->
+<!--                </ul>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
 
-          <!-- Search Mobile -->
-          <div class="relative md:hidden">
-            <input type="search" class="mt-1 w-full pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">
+<!--          &lt;!&ndash; Search Mobile &ndash;&gt;-->
+<!--          <div class="relative md:hidden">-->
+<!--            <input type="search" class="mt-1 w-full pl-10 pr-2 h-10 py-1 rounded-lg border border-gray-200 focus:border-gray-300 focus:outline-none focus:shadow-inner leading-none" placeholder="Search">-->
 
-            <svg class="h-6 w-6 text-gray-300 ml-2 mt-3 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-            </svg>
-          </div>
-          <!-- ./ Search Mobile -->
-        </div>
-      </div>
+<!--            <svg class="h-6 w-6 text-gray-300 ml-2 mt-3 stroke-current absolute top-0 left-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">-->
+<!--              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />-->
+<!--            </svg>-->
+<!--          </div>-->
+<!--          &lt;!&ndash; ./ Search Mobile &ndash;&gt;-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div style="max-width:700px; margin: 50px auto;">
 
-        <form class="flex items-center" (ngSubmit)="searchProduct()">
+        <form class="flex items-center" (ngSubmit)="searchProduct(productInput.value)">
           <label for="voice-search" class="sr-only">Search</label>
           <div class="relative w-full">
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
               <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
             </div>
-            <input type="text" id="voice-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Mockups, Logos, Design Templates..." required="">
+            <input #productInput type="text" id="voice-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Mockups, Logos, Design Templates..." required="">
             <button type="button" class="flex absolute inset-y-0 right-0 items-center pr-3">
               <svg aria-hidden="true" class="w-4 h-4 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7 4a3 3 0 016 0v4a3 3 0 11-6 0V4zm4 10.93A7.001 7.001 0 0017 8a1 1 0 10-2 0A5 5 0 015 8a1 1 0 00-2 0 7.001 7.001 0 006 6.93V17H6a1 1 0 100 2h8a1 1 0 100-2h-3v-2.07z" clip-rule="evenodd"></path></svg>
             </button>
@@ -109,9 +109,9 @@
       <section class="min-h-screen body-font text-gray-600 ">
         <div class="container mx-auto px-5 py-10">
           <div class="-m-4 flex flex-wrap" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
-            <div class="w-full p-4 md:w-1/2 lg:w-1/4" (click)="productClick(product.id)" *ngFor="let product of products">
-              <a class="relative block h-48 overflow-hidden rounded">
-                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product.mainImage?.image" [src]="'data:image/jpeg;base64,' + product.mainImage.image.toString()"/>
+            <div class="w-full p-4 md:w-1/2 lg:w-1/4" *ngFor="let product of products">
+              <a href="/{{product.id}}" class="relative block h-48 overflow-hidden rounded">
+                <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer" *ngIf="product.images[0]?.image" [src]="'data:image/jpeg;base64,' + product.images[0].image.toString()"/>
               </a>
               <div class="mt-4">
                 <h2 class="title-font mb-1 text-lg text-gray-900">{{product.name}}</h2>
