--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,6 +36,16 @@
       </div>
     </div>
   </div>
+<!--  <a href="https://accounts.google.com/o/oauth2/auth?scope=email profile openid-->
+
+<!--&redirect_uri=http://localhost:8080/OriginShop/login-->
+
+<!--&response_type=code-->
+
+<!--&client_id=56418772508-nbp9quvd1915n9imna31jl1eqo0a3mii.apps.googleusercontent.com-->
+
+<!--&approval_prompt=force">Login with Google</a>-->
+  <a href="/oauth2/authorization/google">Login with google</a>
 
   <router-outlet/>
 </div>
